Home Page Componnents

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+
+:root {
+  --desktopSectionMargin: 5%;
+  --laptopSectionMargin: 3%;
+  --mobileSectionMargin: 1%;
+}
+body {
+  background-color: #fff5f0;
+}
