finish About Page

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,16 +1,26 @@
 @import "tailwindcss";
 
-body {
-    @apply bg-light text-dark;
-}
 .banner-cover {
-    @apply bg-cover bg-center;
-    background-image: url("./images/TopBanner.png");
+  @apply bg-cover bg-center;
+  background-image: url("./images/TopBanner.png");
+}
+@layer base {
+  body {
+    @apply bg-light text-dark;
+  }
+
+  h1 {
+    font-family: "Raleway", sans-serif;
+  }
 }
 
 @theme {
-    --color-dark: #262626;
-    --color-morning: #ff8d4d;
-    --color-liteMorning: #ffae80;
-    --color-light: #fff5f0;
+  --color-dark: #262626;
+  --color-morning: #ff8d4d;
+  --color-liteMorning: #ffae80;
+  --color-light: #fff5f0;
+}
+
+.btn-hover {
+  @apply hover:bg-orange-500 hover:text-white hover:scale-105 transition-all duration-300;
 }
