--- a/src/style/main.css
+++ b/src/style/main.css
@@ -14,25 +14,171 @@
     font-family: "Raleway", sans-serif;
   }
 
-    .banner-cover {
-      background-image: url("./images/TopBanner.png");
-    }
+  .banner-cover {
+    background-image: url("./images/TopBanner.png");
+  }
+}
+
+@layer components {
+  .hero-card {
+    @apply flex flex-col sm:flex-row items-center justify-between text-base md:text-lg font-semibold text-dark w-full max-w-2xl mt-6 md:mt-4 lg:mt-8 bg-orange py-4 md:py-2 lg:py-6 px-4 md:px-8 lg:px-12 border-2 border-dark rounded-xl shadow-[6px_6px_0px_rgba(255,190,153,1)] gap-4 sm:gap-0;
+  }
+  .hero-span {
+    @apply text-base md:text-xs font-bold text-center;
+  }
+}
+
+@theme {
+  --color-dark: #262626;
+  --color-morning: #ff8d4d;
+  --color-liteMorning: #ffae80;
+  --color-light: #fff5f0;
+  --color-orange: #ffefe5;
+}
+
+@media (max-width: 320px) {
+  html {
+    font-size: 10px;
   }
 
-  @layer components {
-    .hero-card {
-      @apply flex flex-col sm:flex-row items-center justify-between text-base md:text-lg font-semibold text-dark w-full max-w-2xl mt-6 md:mt-4 lg:mt-8 bg-orange py-4 md:py-2 lg:py-6 px-4 md:px-8 lg:px-12 border-2 border-dark rounded-xl shadow-[6px_6px_0px_rgba(255,190,153,1)] gap-4 sm:gap-0;
-    }
-    .hero-span {
-      @apply text-base md:text-xs font-bold text-center;
-    }
+  .hero-section {
+    padding: 5px;
+    padding-top: 30px;
+  }
+  .hero-section h1 {
+    padding-top: 10px;
+  }
+  .hero-section img {
+    width: 40px;
   }
 
-  @theme {
-    --color-dark: #262626;
-    --color-morning: #ff8d4d;
-    --color-liteMorning: #ffae80;
-    --color-light: #fff5f0;
-    --color-orange: #ffefe5;
+  .sub-container button {
+    font-size: 14px;
+  }
+  .sub-container h2 {
+    font-size: 16px;
+    padding-bottom: 10px;
+  }
+  .sub-container p {
+    width: 90%;
+    font-size: 11px;
+  }
+  .our-mission div {
+    align-items: center;
+    flex-direction: column;
+    padding: 3px;
+    text-align: center;
+    font-size: 10px;
+  }
+  .our-mission h3 {
+  }
+  .our-mission img {
+    font-size: 30px;
+    text-align: center;
+    margin-top: 10px;
+  }
+  .our-achievements {
+    flex-direction: column;
   }
 
+  .our-achievements span {
+    margin-top: 15px;
+    font-size: 15px;
+  }
+  .our-achievements div {
+    padding: 0;
+    margin: 0;
+
+    margin-top: 10px;
+    width: 80px;
+  }
+  .achievement-box {
+    padding: 10px;
+  }
+
+  .achievement-box div .icon {
+    width: 40px;
+    height: 40px;
+    padding: 5px;
+  }
+  .achievement-box h3 {
+    width: 100%;
+    font-size: 12px;
+    text-align: center;
+  }
+  .achievement-box p {
+    text-align: center;
+  }
+
+  .history-container {
+    padding: 9px;
+  }
+  .history-container div {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .history-container > div.flex > div:first-child {
+    flex-direction: row;
+    padding: 5px;
+  }
+
+  .history-container img {
+    width: 30px;
+  }
+
+  .history-container span {
+    font-size: 20px;
+  }
+
+  .history-container h3 {
+    font-size: 15px;
+  }
+
+  .history-container p {
+    font-size: 10اpx;
+  }
+  .teamMembers {
+    gap: 35px;
+  }
+  .teamMembers > div {
+    flex-direction: column;
+    padding: 4px;
+  }
+
+  .teamMembers .box-top {
+    align-items: center;
+    gap: 2px;
+  }
+
+  .teamMembers .box-top img {
+    width: 60px;
+    height: 60px;
+  }
+
+  .teamMembers .box-top span {
+    font-size: 11px;
+    text-align: center;
+  }
+
+  .teamMembers .top-right svg {
+    display: none;
+  }
+
+  .teamMembers .box-bottom h3 {
+    font-size: 12px;
+    text-align: center;
+  }
+
+  .teamMembers .box-bottom p {
+    font-size: 10px;
+    text-align: center;
+    margin-top: 10px;
+  }
+
+  .teamMembers .box,
+  .teamMembers .box-bottom {
+    padding: 4px;
+    gap: 2px;
+  }
+}
