--- a/src/style/main.css
+++ b/src/style/main.css
@@ -26,7 +26,7 @@ button:hover {
 
 @layer components {
     .hero-card {
-        @apply flex flex-col sm:flex-row items-center justify-between text-base md:text-lg font-semibold text-dark w-full max-w-2xl mt-6 md:mt-4 lg:mt-8 bg-orange py-4 md:py-2 lg:py-6 px-4 md:px-8 lg:px-12 border-2 border-dark rounded-xl shadow-[6px_6px_0px_rgba(255,190,153,1)] gap-4 sm:gap-0;
+        @apply flex flex-col sm:flex-row items-center justify-between text-base md:text-lg font-semibold text-dark w-full max-w-2xl mt-6 md:mt-4 lg:mt-8 bg-orange py-4 md:py-2 lg:py-6 px-4 md:px-8 lg:px-12 border-2 border-dark rounded-xl shadow-[6px_6px_0_var(--color-liteMorning)] gap-4 sm:gap-0;
     }
 
     .hero-span {
@@ -36,7 +36,7 @@ button:hover {
     /* Footer scoped component classes */
     /* Main container */
     .footer-container {
-        @apply w-full bg-white border-2 border-dark rounded-xl shadow-[6px_6px_0_#1E1E1E] p-6 md:p-10 lg:p-14 flex flex-col gap-7 mt-25 mb-15;
+        @apply w-full bg-white border-2 border-dark rounded-xl shadow-[6px_6px_0_var(--color-dark)] p-6 md:p-10 lg:p-14 flex flex-col gap-7 mt-25 mb-15;
     }
 
     /* Top section */
