--- a/src/style/main.css
+++ b/src/style/main.css
@@ -26,6 +26,10 @@
     .hero-span {
       @apply text-base md:text-xs font-bold text-center;
     }
+    .box-shadow{
+      @apply [box-shadow:6px_6px_0_black]
+    }
+    
   }
 
   @theme {
@@ -36,3 +40,24 @@
     --color-orange: #ffefe5;
   }
 
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* IE + Edge */
+  scrollbar-width: none;     /* Firefox */
+}
