--- a/src/style/main.css
+++ b/src/style/main.css
@@ -10,17 +10,27 @@
     font-family: "Outfit", sans-serif;
   }
 
-  /* Hide scrollbar for Chrome, Safari, Opera */
+
   .scrollbar-hide::-webkit-scrollbar,
   .hide-scrollbar::-webkit-scrollbar {
     display: none;
   }
 
-  /* Hide scrollbar for IE, Edge, Firefox */
+  
   .scrollbar-hide,
   .hide-scrollbar {
-    -ms-overflow-style: none; /* IE & Edge */
-    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; 
+    scrollbar-width: none; 
+  }
+  .slick-prev:before,
+  .slick-next:before {
+    font-size: 26px;
+    color: #ff8d4d !important;
+  }
+  .slick-next,
+  .slick-prev {
+    right: -20px !important;
+    display: none !important;
   }
 }
 
@@ -41,7 +51,7 @@ button:hover {
            w-full max-w-2xl mt-6 md:mt-4 lg:mt-8 
            bg-orange py-4 md:py-2 lg:py-6 
            px-4 md:px-8 lg:px-12 
-           border-2 border-dark rounded-xl 
+           border-[3px] border-dark rounded-sm 
            shadow-[6px_6px_0px_rgba(255,190,153,1)] 
            gap-4 sm:gap-0;
   }
